forge/tests/error/froglet-is-linear1.frg
#lang forge/froglet
option run_sterling off

sig Node {
    next: lone Node
}

check {} for { Node is linear }

